--- a/package.json
+++ b/package.json
@@ -22,5 +22,8 @@
     "eslint-plugin-import": "^2.13.0",
     "mocha": "^5.2.0",
     "mongodb-memory-server": "^1.9.3"
+  },
+  "dependencies": {
+    "mongoose": "^5.2.6"
   }
 }
