--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "- node version: v8.10 - deploy script:     - `$ AWS_ACCESS_KEY_ID=xxxxx AWS_SECRET_ACCESS_KEY=xxxxx  serverless deploy`     - note: serverless requires this AWS_ACCESS_KEY_ID has AdministratorAccess right in IAM",
   "main": "handler.js",
   "scripts": {
-    "test": "mocha tests/**/*.test.js && ./node_modules/.bin/eslint src/**/*.js"
+    "test": "mocha tests/**/*.test.js && ./node_modules/.bin/eslint ."
   },
   "repository": {
     "type": "git",
@@ -25,6 +25,8 @@
     "mongodb-memory-server": "^1.9.3"
   },
   "dependencies": {
-    "mongoose": "^5.2.6"
+    "moment": "^2.22.2",
+    "mongoose": "^5.2.6",
+    "ramda": "^0.25.0"
   }
 }
