--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "- node version: v8.10 - deploy script:     - `$ AWS_ACCESS_KEY_ID=xxxxx AWS_SECRET_ACCESS_KEY=xxxxx  serverless deploy`     - note: serverless requires this AWS_ACCESS_KEY_ID has AdministratorAccess right in IAM",
   "main": "handler.js",
   "scripts": {
-    "test": "mocha tests/**/*.test.js && ./node_modules/.bin/eslint ."
+    "test": "NODE_PATH=. mocha tests/**/*.test.js && ./node_modules/.bin/eslint ."
   },
   "repository": {
     "type": "git",
